Load SpatiaLite extension and enable GPX routes

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,9 @@ Werkzeug==2.3.7
 Gunicorn==21.2.0
 psycopg2-binary==2.9.7
 GeoAlchemy2==0.14.1
-Shapely==2.0.1
+Shapely==2.0.3
 gpxpy==1.5.0
 Pillow==10.0.1
 python-dotenv==1.0.0
 requests==2.31.0
+email-validator==2.3.0
